--- a/Mkashif.html/index.html
+++ b/Mkashif.html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="main">
-    <!-- Navbar -->
+    
     <div class="navbar">
       <div class="icon">
         <h2 class="logo">M Kashif</h2>
@@ -16,28 +16,25 @@
 
       <div class="menu">
         <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
+          <li><a href="https://www.linkedin.com/in/m-kashif-mangrio-7a97a4386/">HOME</a></li>
+          <li><a href="https://www.linkedin.com/messaging/thread/2-ZTkwYjRhMDMtNjlmNC00ZmFmLWE4ZDEtYjFmMTYwNzkxY2Q4XzEwMA==/">CHAT</a></li>
           <li><a href="#">SERVICE</a></li>
           <li><a href="#">DESIGN</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="onclick=alert(03289258328\n kashifmangrio264@gmail.com")>CONTACT</a></li>
         </ul>
       </div>
 
       <div class="search">
-        <input class="srch" type="search" placeholder="Type to Search">
-        <a href="#"><button class="btn">Search</button></a>
+        <a href="https://app.netlify.com/teams/kashifmangrio264-hub/projects"><button class="btn">My Projects</button></a>
       </div>
     </div>
 
-    <!-- Content -->
     <div class="content">
       <h1>Web Design & <br><span>Development</span><br>Course</h1>
-      <p class="par">Web Design is a specialisation of the design stream. They also use HTML, CSS, 
-        WYSIWYG editing software, mark up validators etc. to create design elements.
+      <p class="par">Web Design is a specialisation of the design stream.
       </p>
 
-      <button class="cn"><a href="#">JOIN US</a></button>
+      <button class="cn"><a href="https://github.com/kashifmangrio264-hub">JOIN US</a></button>
 
       <div class="form">
         <h2>Login Here</h2>
@@ -62,7 +59,6 @@
     </div>
   </div>
 
-  <!-- Ionicons -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
