--- a/Mkashif.html/index.html
+++ b/Mkashif.html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="main">
-    
+
     <div class="navbar">
       <div class="icon">
         <h2 class="logo">M Kashif</h2>
@@ -16,11 +16,11 @@
 
       <div class="menu">
         <ul>
-          <li><a href="https://www.linkedin.com/in/m-kashif-mangrio-7a97a4386/">HOME</a></li>
-          <li><a href="https://www.linkedin.com/messaging/thread/2-ZTkwYjRhMDMtNjlmNC00ZmFmLWE4ZDEtYjFmMTYwNzkxY2Q4XzEwMA==/">CHAT</a></li>
-          <li><a href="#">SERVICE</a></li>
-          <li><a href="#">DESIGN</a></li>
-          <li><a href="onclick=alert(03289258328\n kashifmangrio264@gmail.com")>CONTACT</a></li>
+          <li><a href="https://www.linkedin.com/in/m-kashif-mangrio-7a97a4386/" target="_blank">HOME</a></li>
+          <li><a href="https://www.linkedin.com/messaging/thread/2-ZTkwYjRhMDMtNjlmNC00ZmFmLWE4ZDEtYjFmMTYwNzkxY2Q4XzEwMA==/" target="_blank">CHAT</a></li>
+          <li><a href="https://kashif-m-p.netlify.app/" target="_blank">PORTFOLIO</a></li>
+          <li><a href="<Phone:03289258328\nEmail: kashifmangrio264@gmail.com>" target="_blank">CONTACT</a></li>
+
         </ul>
       </div>
 
